# learn_opengl

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
dep/: CMakeLists.txt
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
dep/imgui/: CMakeLists.txt
dep/stb/: CMakeLists.txt
learn_opengl/: CMakeLists.txt  learn_opengl.natvis
learn_opengl/content/shaders/: fragment_shader.frag  outline.shader.json  simple.shader.json  vertex_shader.vert
learn_opengl/content/shaders/src/: outline.frag  outline.vert  simple.frag
learn_opengl/content/textures/: container.texture.json  container_specular.texture.json  viking_room.texture.json
learn_opengl/src/: camera.cpp  camera.hpp  gl_api.cpp  gl_api.hpp  include_glm.hpp  include_imgui.h  main.cpp  model3d.cpp  model3d.hpp  properties_widget.cpp  properties_widget.hpp  render_system.cpp  render_system.hpp  shader_helper.h  window.cpp  window.hpp  world.cpp  world.hpp
learn_opengl/src/components/: camera_component.cpp  camera_component.hpp  component.cpp  component.hpp  mesh_component.cpp  mesh_component.hpp  point_light_component.cpp  point_light_component.hpp  transform_component.cpp  transform_component.hpp  type_id_widget.cpp  type_id_widget.hpp
learn_opengl/src/components/lights/: attenuation.cpp  attenuation.hpp  directional_light_component.cpp  directional_light_component.hpp  point_light_component.cpp  point_light_component.hpp  spot_light_component.cpp  spot_light_component.hpp
learn_opengl/src/debug/: gl_debug_messenger.cpp  gl_debug_messenger.hpp
learn_opengl/src/entities/: camera_entity.cpp  camera_entity.hpp  entity.cpp  entity.hpp
learn_opengl/src/macro/: warning_suppress.hpp
learn_opengl/src/memory/: memory.cpp  memory.hpp
learn_opengl/src/name_cache/: name.cpp  name.hpp  name_cache.cpp  name_cache.hpp
learn_opengl/src/opengl/: gl_api.cpp  gl_api.hpp
learn_opengl/src/opengl/debug/: annotations.cpp  annotations.hpp  gl_debug_messenger.cpp  gl_debug_messenger.hpp
learn_opengl/src/reflection/: eigen_reflect.hpp  glm_reflect.hpp  predefined.hpp  reflection.cpp  reflection.hpp  register_types.hpp  type_bank.cpp  type_bank.hpp
learn_opengl/src/shader/: define_handle.hpp  sampler_uniform.hpp  shader.cpp  shader.hpp  shader_define.cpp  shader_define.hpp  shader_manager.cpp  shader_manager.hpp  shader_uniform.cpp  shader_uniform.hpp  shader_variable.cpp  shader_variable.hpp  uniform_handle.hpp
learn_opengl/src/template/: class_member_traits.hpp  get_enum_underlying.hpp  member_offset.hpp  on_scope_leave.hpp  tuple_type_by_index.hpp  type_to_gl_type.hpp
learn_opengl/src/texture/: image_loader.cpp  image_loader.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp
learn_opengl/src/wrap/: wrap_eigen.hpp  wrap_glfw.hpp  wrap_glm.hpp  wrap_imgui.h
