cmake_minimum_required(VERSION 3.16)

set(SPDLOG_FMT_EXTERNAL ON CACHE BOOL "")

option(CPP_REFLECTION_WITH_TESTS "" ON)
option(EVERYDAY_TOOLS_WITH_TESTS "" ON)

add_subdirectory(google/googletest)
add_subdirectory(tinyobjloader)
add_subdirectory(fmt)
add_subdirectory(spdlog)
add_subdirectory(eigen)
add_subdirectory(glfw)
add_subdirectory(glm)
add_subdirectory(glad)
add_subdirectory(stb)
add_subdirectory(imgui)
add_subdirectory(json)
add_subdirectory(EverydayTools)
add_subdirectory(CppReflection)