cmake_minimum_required(VERSION 3.16)

project(imgui)
set(target_name imgui)
file(GLOB imgui_headers "${CMAKE_CURRENT_SOURCE_DIR}/imgui/*.h")
list(APPEND imgui_headers ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/imgui_impl_opengl3.h)
list(APPEND imgui_headers ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/imgui_impl_glfw.h)
file(GLOB imgui_sources "${CMAKE_CURRENT_SOURCE_DIR}/imgui/*.cpp")
list(APPEND imgui_sources ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/imgui_impl_opengl3.cpp)
list(APPEND imgui_sources ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/imgui_impl_glfw.cpp)
add_library(${target_name} STATIC ${imgui_headers} ${imgui_sources})
target_include_directories(${target_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${target_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/imgui)
target_link_libraries(${target_name} PUBLIC glfw)
